Fix spacing on input fields

--- a/public/style.css
+++ b/public/style.css
@@ -105,7 +105,7 @@ aside p {
 
 .formTextBox, aside form button {
   border: none;
-  width: 80%;
+  width: 88%;
   margin: 0 auto;
   border-radius: 5px;
   height: 35px;
